--- a/nuxeo-webengine-features/nuxeo-webengine-blogs-api/pom.xml
+++ b/nuxeo-webengine-features/nuxeo-webengine-blogs-api/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -14,28 +13,12 @@
   <name>Nuxeo Webengine Blogs API</name>
   <description>Sites Module to handle blogs API.</description>
 
-  <properties>
-    <nuxeo.distribution.version>5.4.3-SNAPSHOT</nuxeo.distribution.version>
-  </properties>
-
   <dependencies>
-   <dependency>
+    <dependency>
       <groupId>org.nuxeo.ecm.core</groupId>
       <artifactId>nuxeo-core-api</artifactId>
     </dependency>
   </dependencies>
-
-  <profiles>
-    <profile>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <id>dev</id>
-      <properties>
-        <assembly.name>${assembly.tests.name}</assembly.name>
-      </properties>
-    </profile>
-  </profiles>
 
   <build>
     <plugins>
@@ -53,19 +36,6 @@
         </executions>
       </plugin>
       <!-- end APT plugin -->
-      <!-- manual testing purpose -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-nuxeo-plugin</artifactId>
-        <extensions>true</extensions>
-        <configuration>
-          <runPreprocessor>false</runPreprocessor>
-          <format>directory</format>
-          <outputDirectory>target</outputDirectory>
-          <targetFile>blogs.ear</targetFile>
-          <descriptor>${basedir}/src/main/resources/assemble/blogs.xml</descriptor>
-        </configuration>
-      </plugin>
     </plugins>
   </build>
 
