--- a/nuxeo-webengine-features/nuxeo-webengine-blogs-core/pom.xml
+++ b/nuxeo-webengine-features/nuxeo-webengine-blogs-core/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -14,22 +13,16 @@
   <name>Nuxeo Webengine Blogs Core contributions</name>
   <description>Core Module to handle blogs.</description>
 
-  <properties>
-    <nuxeo.distribution.version>5.4.3-SNAPSHOT</nuxeo.distribution.version>
-  </properties>
-
   <dependencies>
-      <dependency>
-        <groupId>org.nuxeo.ecm.webengine</groupId>
-        <artifactId>nuxeo-webengine-blogs-api</artifactId>
-      </dependency>
-
-      <dependency>
-        <groupId>org.nuxeo.ecm.webengine</groupId>
-        <artifactId>nuxeo-webengine-sites-api</artifactId>
-      </dependency>
-
-      <dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.webengine</groupId>
+      <artifactId>nuxeo-webengine-blogs-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.webengine</groupId>
+      <artifactId>nuxeo-webengine-sites-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.nuxeo.ecm.core</groupId>
       <artifactId>nuxeo-core-api</artifactId>
     </dependency>
@@ -37,20 +30,7 @@
       <groupId>org.nuxeo.ecm.core</groupId>
       <artifactId>nuxeo-core-event</artifactId>
     </dependency>
-
   </dependencies>
-
-  <profiles>
-    <profile>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <id>dev</id>
-      <properties>
-        <assembly.name>${assembly.tests.name}</assembly.name>
-      </properties>
-    </profile>
-  </profiles>
 
   <build>
     <plugins>
@@ -68,19 +48,6 @@
         </executions>
       </plugin>
       <!-- end APT plugin -->
-      <!-- manual testing purpose -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-nuxeo-plugin</artifactId>
-        <extensions>true</extensions>
-        <configuration>
-          <runPreprocessor>false</runPreprocessor>
-          <format>directory</format>
-          <outputDirectory>target</outputDirectory>
-          <targetFile>blogs.ear</targetFile>
-          <descriptor>${basedir}/src/main/resources/assemble/blogs.xml</descriptor>
-        </configuration>
-      </plugin>
     </plugins>
   </build>
 
