NXP-7134: move nuxeo-platform-localconfiguration-web module inside nuxeo-platform-localconfiguration

--- a/nuxeo-platform-localconfiguration/pom.xml
+++ b/nuxeo-platform-localconfiguration/pom.xml
@@ -15,6 +15,7 @@
 
   <modules>
     <module>nuxeo-platform-localconfiguration-simple</module>
+    <module>nuxeo-platform-localconfiguration-web</module>
   </modules>
 
 </project>
