--- a/nuxeo-platform-htmlsanitizer/pom.xml
+++ b/nuxeo-platform-htmlsanitizer/pom.xml
@@ -27,7 +27,7 @@
       <artifactId>nuxeo-core-event</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.owasp</groupId>
+      <groupId>org.owasp.antisamy</groupId>
       <artifactId>antisamy</artifactId>
     </dependency>
 
