--- a/pom.xml
+++ b/pom.xml
@@ -1995,9 +1995,9 @@
         <version>1.1.1</version>
       </dependency>
       <dependency>
-        <groupId>org.owasp</groupId>
+        <groupId>org.owasp.antisamy</groupId>
         <artifactId>antisamy</artifactId>
-        <version>1.3</version>
+        <version>1.4.4</version>
       </dependency>
       <dependency>
         <groupId>batik</groupId>
