NXP-7085 fixing test scope

--- a/nuxeo-platform-usermanager-core/pom.xml
+++ b/nuxeo-platform-usermanager-core/pom.xml
@@ -83,6 +83,7 @@
     <dependency>
         <groupId>jmock</groupId>
         <artifactId>jmock</artifactId>
+	<scope>test</scope>
     </dependency>
 
   </dependencies>
