NXP-7085 fixing tree resolution in distributions (put jboss dependencies as optional)

--- a/nuxeo-runtime-osgi/pom.xml
+++ b/nuxeo-runtime-osgi/pom.xml
@@ -25,21 +25,21 @@
     <dependency>
       <groupId>org.jboss.jbossas</groupId>
       <artifactId>jboss-as-system</artifactId>
+      <scope>compile</scope>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.jboss.jbossas</groupId>
       <artifactId>jboss-as-system-jmx</artifactId>
+      <scope>compile</scope>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.jboss</groupId>
       <artifactId>jboss-common-core</artifactId>
+      <scope>compile</scope>
+      <optional>true</optional>
     </dependency>
-<!--
-    <dependency>
-      <groupId>jboss</groupId>
-      <artifactId>jboss-jmx</artifactId>
-    </dependency>
- -->
   </dependencies>
 
 </project>
