NXP-7085 fixing compilation (missing ejb-api)

--- a/nuxeo-platform-comment/nuxeo-platform-comment/pom.xml
+++ b/nuxeo-platform-comment/nuxeo-platform-comment/pom.xml
@@ -41,6 +41,10 @@
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-usermanager-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>javax.ejb</groupId>
+      <artifactId>ejb-api</artifactId>
+    </dependency>
 
 
     <!-- test dependencies -->
