--- a/nuxeo-webengine-features/nuxeo-webengine-base/pom.xml
+++ b/nuxeo-webengine-features/nuxeo-webengine-base/pom.xml
@@ -45,6 +45,10 @@
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>javax.ejb</groupId>
+      <artifactId>ejb-api</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
