--- a/nuxeo-webengine-gwt/pom.xml
+++ b/nuxeo-webengine-gwt/pom.xml
@@ -46,6 +46,8 @@
     <dependency>
       <groupId>org.nuxeo.build</groupId>
       <artifactId>nuxeo-distribution-tools</artifactId>
+      <scope>compile</scope>
+      <optional>true</optional>
     </dependency>
 
   </dependencies>
