NXP-7085 fixing tree resolution in distribution
* setting h2 thirds as optional in storage extensions
* fixing ra packaging (more deps in provided scope)
* ...

--- a/nuxeo-core-storage-sql/nuxeo-core-storage-sql-extensions/pom.xml
+++ b/nuxeo-core-storage-sql/nuxeo-core-storage-sql-extensions/pom.xml
@@ -16,10 +16,12 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-core</artifactId>
+      <optional>true</optional>
     </dependency>
     
   </dependencies>
