--- a/nuxeo-opensocial-container/pom.xml
+++ b/nuxeo-opensocial-container/pom.xml
@@ -89,6 +89,8 @@
     <dependency>
       <groupId>org.nuxeo.build</groupId>
       <artifactId>nuxeo-distribution-tools</artifactId>
+      <scope>compile</scope>
+      <optional>true</optional>
     </dependency>
 
     <!-- Test scope -->
