NXP-7085 fixing tree resolution in distributions
* cleaning up distribution base
* adding core management to core server

--- a/nuxeo-distribution-base/pom.xml
+++ b/nuxeo-distribution-base/pom.xml
@@ -30,6 +30,7 @@
     <dependency>
       <groupId>org.nuxeo.runtime</groupId>
       <artifactId>nuxeo-runtime-launcher</artifactId>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.nuxeo.ecm.core</groupId>
