--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,7 @@
     <!-- should use same property name as JBoss to ease upgrades -->
     <jboss.ejb.version>3.0-RC8</jboss.ejb.version>
     <javax.ejb.version>3.0-RC8</javax.ejb.version>
-    <nuxeo.distribution.tools.version>1.10-SNAPSHOT</nuxeo.distribution.tools.version>
+    <nuxeo.distribution.tools.version>1.10</nuxeo.distribution.tools.version>
     <!-- compliance property since removal of maven-nuxeo-plugin execution -->
     <eclipseVersion>${project.version}</eclipseVersion>
   </properties>
@@ -594,16 +594,16 @@
         <groupId>org.jboss.ejb3</groupId>
         <artifactId>jboss-ejb3-ext-api</artifactId>
         <version>1.0.0</version>
-	<exclusions>
-	  <exclusion>
-	    <groupId>org.jboss.javaee</groupId>
-	    <artifactId>jboss-ejb-api</artifactId>
-	  </exclusion>
-	  <exclusion>
-	    <groupId>org.jboss.metadata</groupId>
-	    <artifactId>jboss-metadata</artifactId>
-	  </exclusion>
-	</exclusions>
+        <exclusions>
+          <exclusion>
+            <groupId>org.jboss.javaee</groupId>
+            <artifactId>jboss-ejb-api</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.jboss.metadata</groupId>
+            <artifactId>jboss-metadata</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.jboss.remoting</groupId>
@@ -768,12 +768,12 @@
         <groupId>org.mortbay.jetty</groupId>
         <artifactId>servlet-api-2.5</artifactId>
         <version>${jetty.mortbay.version}</version>
-	<exclusions>
-	  <exclusion>
-	    <groupId>org.mortbay.jetty</groupId>
-	    <artifactId>servlet-api-2.5</artifactId>
-	  </exclusion>
-	</exclusions>
+        <exclusions>
+          <exclusion>
+            <groupId>org.mortbay.jetty</groupId>
+            <artifactId>servlet-api-2.5</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.mortbay.jetty</groupId>
@@ -970,7 +970,7 @@
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.8.1</version>
-	<scope>provided</scope>
+        <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.hamcrest</groupId>
@@ -1972,7 +1972,7 @@
       <dependency>
         <groupId>org.glassfish.embedded</groupId>
         <artifactId>glassfish-embedded-all</artifactId>
-	<version>3.0-b38-nxp-web-210</version>
+        <version>3.0-b38-nxp-web-210</version>
       </dependency>
 
     </dependencies>
