--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
@@ -34,7 +32,6 @@
     <module>nuxeo-platform-io</module>
     <module>nuxeo-platform-tag-service</module>
     <module>nuxeo-webengine-features</module>
-    <!-- NXP-5660 - temporary rollback because of Hudson issue -->
     <module>nuxeo-platform-annotations</module>
     <module>nuxeo-platform-imaging-tiling</module>
     <module>nuxeo-platform-syndication</module>
@@ -57,19 +54,6 @@
     <module>nuxeo-platform-localconfiguration</module>
     <module>nuxeo-platform-directory-web</module>
   </modules>
-
-  <profiles>
-    <!-- NXP-5660 - temporary rollback because of Hudson issue <profile> <id>no-osgi</id>
-      <activation> <file><exists>pom.xml</exists></file> </activation> <modules> <module>nuxeo-platform-annotations</module>
-      <module>nuxeo-platform-imaging-tiling</module> <module>nuxeo-platform-syndication</module>
-      <module>nuxeo-platform-jbpm</module> <module>nuxeo-platform-lang</module> <module>nuxeo-platform-mail</module>
-      <module>nuxeo-platform-notification</module> <module>nuxeo-platform-preview</module>
-      <module>nuxeo-platform-publisher</module> <module>nuxeo-platform-forum</module> <module>nuxeo-theme-editor</module>
-      <module>nuxeo-platform-webwidgets</module> <module>nuxeo-platform-userworkspace</module>
-      <module>nuxeo-platform-virtualnavigation</module>
-      <module>nuxeo-automation</module> <module>nuxeo-features-test</module> <module>nuxeo-admin-center</module>
-      </modules> </profile> -->
-  </profiles>
 
   <dependencyManagement>
     <dependencies>
