--- a/nuxeo-functional-tests/pom.xml
+++ b/nuxeo-functional-tests/pom.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0"?>
 <project>
   <modelVersion>4.0.0</modelVersion>
-
   <parent>
-    <!-- avoid pulling unwanted test dependencies (old webdriver) -->
     <groupId>org.nuxeo</groupId>
     <artifactId>nuxeo-ecm</artifactId>
     <version>5.4.3-SNAPSHOT</version>
@@ -11,7 +9,7 @@
 
   <groupId>org.nuxeo.ecm.distribution</groupId>
   <artifactId>nuxeo-functional-tests</artifactId>
-  <name>nuxeo-functional-tests</name>
+  <name>Nuxeo Functional Tests</name>
   <description>Nuxeo Functional Tests. Framework for testing nuxeo
     distribution projects</description>
 
@@ -44,7 +42,6 @@
     <dependency>
       <groupId>firebug</groupId>
       <artifactId>firebug</artifactId>
-      <version>1.6.2-fx</version>
       <type>xpi</type>
     </dependency>
   </dependencies>
