NXP-7155 - fixed poms

--- a/nuxeo-automation/pom.xml
+++ b/nuxeo-automation/pom.xml
@@ -18,8 +18,11 @@
     <module>nuxeo-automation-core</module>
     <module>nuxeo-automation-features</module>
     <module>nuxeo-automation-jsf</module>
+    <!--module>nuxeo-automation-client-common</module-->
     <module>nuxeo-automation-server</module>
     <module>nuxeo-automation-client</module>
+    <module>nuxeo-automation-test</module>
+    <!--module>nuxeo-automation-hessian</module-->
   </modules>
 
   <developers>
