NXP-7085 - add dependencyManagement for org.nuxeo.runtime:nuxeo-runtime-tomcat-adapter

--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,11 @@
       </dependency>
       <dependency>
         <groupId>org.nuxeo.runtime</groupId>
+        <artifactId>nuxeo-runtime-tomcat-adapter</artifactId>
+        <version>${nuxeo.runtime.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.nuxeo.runtime</groupId>
         <artifactId>nuxeo-runtime-jtajca</artifactId>
         <version>${nuxeo.runtime.version}</version>
       </dependency>
