--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,11 @@
       </dependency>
       <dependency>
         <groupId>org.nuxeo.ecm.platform</groupId>
+        <artifactId>nuxeo-platform-ws-jbossws</artifactId>
+        <version>${nuxeo.services.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.nuxeo.ecm.platform</groupId>
         <artifactId>nuxeo-platform-archive-api</artifactId>
         <version>${nuxeo.services.version}</version>
       </dependency>
