NXP-7085 - improved assemblies; better use of dependency tree and dependencyManagement; use of nuxeo-distribution-tools 1.10.1

--- a/nuxeo-distribution-tomcat/pom.xml
+++ b/nuxeo-distribution-tomcat/pom.xml
@@ -38,6 +38,10 @@
       </activation>
     </profile>
     <profile>
+      <id>nuxeo-coreserver</id>
+      <!-- profile for building Tomcat with only Nuxeo CoreServer -->
+    </profile>
+    <profile>
       <id>nuxeo-cap</id>
       <!-- profile for building Tomcat with only Nuxeo CAP -->
     </profile>
