--- a/nuxeo-distribution-cap/pom.xml
+++ b/nuxeo-distribution-cap/pom.xml
@@ -11,12 +11,9 @@
   <artifactId>nuxeo-distribution-cap</artifactId>
   <packaging>zip</packaging>
   <name>Nuxeo CAP</name>
-  <description>
-    Nuxeo Content Application Platform EAR.
-  </description>
+  <description>Nuxeo Content Application Platform EAR.</description>
 
   <dependencies>
-
     <dependency>
       <groupId>org.nuxeo.ecm.distribution</groupId>
       <artifactId>nuxeo-distribution-coreserver</artifactId>
@@ -278,32 +275,26 @@
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-htmlsanitizer</artifactId>
     </dependency>
-
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-userworkspace-api</artifactId>
     </dependency>
-
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-userworkspace-core</artifactId>
     </dependency>
-
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-userworkspace-types</artifactId>
     </dependency>
-
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-userworkspace-web</artifactId>
     </dependency>
-
     <dependency>
       <groupId>org.nuxeo.ecm.automation</groupId>
       <artifactId>nuxeo-automation-features</artifactId>
     </dependency>
-
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-admin-center</artifactId>
@@ -365,13 +356,10 @@
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-user-settings-web</artifactId>
     </dependency>
-
   </dependencies>
 
   <build>
-
     <plugins>
-
       <plugin>
         <groupId>org.nuxeo.build</groupId>
         <artifactId>nuxeo-distribution-tools</artifactId>
@@ -379,9 +367,7 @@
           <buildFile>${basedir}/src/main/assemble/assembly.xml</buildFile>
         </configuration>
       </plugin>
-
     </plugins>
-
   </build>
 
 </project>
