--- a/nuxeo-distribution-dm/pom.xml
+++ b/nuxeo-distribution-dm/pom.xml
@@ -240,6 +240,16 @@
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-user-oauth</artifactId>
     </dependency>
+
+    <!-- WSS -->
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-generic-wss-front</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-generic-wss-handler</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
