--- a/nuxeo-distribution-jboss/pom.xml
+++ b/nuxeo-distribution-jboss/pom.xml
@@ -17,26 +17,30 @@
   <dependencies>
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-ws-jbossws</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-login-jboss</artifactId>
       <exclusions>
-	<exclusion>
-	  <groupId>org.jboss.jbossas</groupId>
-	  <artifactId>jboss-as-security</artifactId>
-	</exclusion>
+        <exclusion>
+          <groupId>org.jboss.jbossas</groupId>
+          <artifactId>jboss-as-security</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-auth-web-jboss</artifactId>
       <exclusions>
-	<exclusion>
-	  <groupId>org.jboss.security</groupId>
-	  <artifactId>jboss-security-spi</artifactId>
-	</exclusion>
-	<exclusion>
-	  <groupId>org.jboss.security</groupId>
-	  <artifactId>jbosssx</artifactId>
-	</exclusion>
+        <exclusion>
+          <groupId>org.jboss.security</groupId>
+          <artifactId>jboss-security-spi</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.jboss.security</groupId>
+          <artifactId>jbosssx</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
