--- a/pom.xml
+++ b/pom.xml
@@ -582,6 +582,10 @@
             <groupId>org.apache.jackrabbit</groupId>
             <artifactId>jackrabbit-core</artifactId>
           </exclusion>
+          <exclusion>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate</artifactId>
+          </exclusion>
         </exclusions>
       </dependency>
       <dependency>
@@ -1594,7 +1598,6 @@
           </exclusion>
         </exclusions>
       </dependency>
-      <!-- org.jbpm.jbpm3:jbpm-jpdl:jar:3.3.0.GA uses ant 1.7.0 -->
       <dependency>
         <groupId>org.apache.ant</groupId>
         <artifactId>ant</artifactId>
