--- a/nuxeo-distribution-cap/pom.xml
+++ b/nuxeo-distribution-cap/pom.xml
@@ -296,6 +296,10 @@
       <artifactId>nuxeo-automation-features</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.nuxeo.ecm.automation</groupId>
+      <artifactId>nuxeo-automation-jsf</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-admin-center</artifactId>
     </dependency>
