--- a/nuxeo-user-profile/pom.xml
+++ b/nuxeo-user-profile/pom.xml
@@ -37,6 +37,11 @@
       <artifactId>nuxeo-platform-userworkspace-core</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-test</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
