--- a/nuxeo-core-storage-sql/nuxeo-core-storage-sql-test/pom.xml
+++ b/nuxeo-core-storage-sql/nuxeo-core-storage-sql-test/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.core</groupId>
     <artifactId>nuxeo-core-storage-sql-parent</artifactId>
-    <version>5.4.1.1-SNAPSHOT</version>
+    <version>5.4.1-HF06</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
