--- a/nuxeo-platform/pom.xml
+++ b/nuxeo-platform/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-services-parent</artifactId>
-    <version>5.4.1.1-SNAPSHOT</version>
+    <version>5.4.1-HF06</version>
   </parent>
 
   <artifactId>nuxeo-platform</artifactId>
